// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components FormListItem should renders correctly 1 1`] = `
<ForwardRef(View)
  style={
    Array [
      Object {
        "borderBottomWidth": 0.5,
        "borderColor": "#b5b5b5",
        "paddingHorizontal": 15,
        "paddingVertical": 15,
        "width": "100%",
      },
      null,
    ]
  }
/>
`;

exports[`Components FormListItem should renders correctly 2 1`] = `
<ForwardRef(View)
  style={
    Array [
      Object {
        "borderBottomWidth": 0.5,
        "borderColor": "#b5b5b5",
        "paddingHorizontal": 15,
        "paddingVertical": 15,
        "width": "100%",
      },
      Object {
        "borderBottomWidth": 0,
      },
    ]
  }
/>
`;

exports[`Components FormListItem should renders correctly 3 1`] = `
<ForwardRef(View)
  style={
    Array [
      Object {
        "borderBottomWidth": 0.5,
        "borderColor": "#b5b5b5",
        "paddingHorizontal": 15,
        "paddingVertical": 15,
        "width": "100%",
      },
      null,
    ]
  }
>
  <ForwardRef(View) />
</ForwardRef(View)>
`;

exports[`Components FormListItem should renders correctly 4 1`] = `
<ForwardRef(View)
  style={
    Array [
      Object {
        "borderBottomWidth": 0.5,
        "borderColor": "#b5b5b5",
        "paddingHorizontal": 15,
        "paddingVertical": 15,
        "width": "100%",
      },
      Object {
        "borderBottomWidth": 0,
      },
    ]
  }
>
  <ForwardRef(View) />
</ForwardRef(View)>
`;
